--- a/qa/regression/snowflakeCopy.json
+++ b/qa/regression/snowflakeCopy.json
@@ -11,7 +11,7 @@
 		"SPATIAL_FORMAT"          : "WKT"
 	},
 	"tests": [{
-			"source": "oracle19c",
+			"source": "oracle#1",
 			"target": "snow#1",
 			"tasks": [
 				"oracle","mssql","mysql"
