--- a/qa/regression/snowflakeTestSuite.json
+++ b/qa/regression/snowflakeTestSuite.json
@@ -18,7 +18,7 @@
       "oracle","mysql","mssql"
     ]
   },{
-    "source"          : "oracle19c"
+    "source"          : "oracle#1"
   , "target"          : "snow#1"
   , "tasks": [ 
       "oracle","mysql","mssql"
@@ -42,7 +42,7 @@
       "oracle","mysql","mssql"
 	]
   },{
-    "source"          : "mssql22"
+    "source"          : "mssql#1"
   , "target"          : "snow#1"
   , "tasks": [ 
       "oracle","mysql","mssql"
@@ -83,7 +83,7 @@
   },{
     "source"          : "snow#1"
   , "targets": [
-	  "snow#1","oracle19c","oracle18c","oracle12c","oracle11g","mssql22","mssql19","postgres#1","mysql#1","mariadb#1","mongodb#1"
+	  "snow#1","oracle#1","oracle18c","oracle12c","oracle11g","mssql#1","mssql19","postgres#1","mysql#1","mariadb#1","mongodb#1"
 	  
     ]
    , "parameters"      : {
