--- a/docker/dockerfiles/linux/docker-compose.yml
+++ b/docker/dockerfiles/linux/docker-compose.yml
@@ -136,6 +136,8 @@ services:
     restart: always
   
   # ORA2103-01: 15216
+  # ORA2303-01: 15217
+  # ORA2305-01: 15218
   
   MARIA11-01: 
     container_name: MARIA11-01
