--- a/docker/dockerfiles/linux/ORA2305-01.yml
+++ b/docker/dockerfiles/linux/ORA2305-01.yml
@@ -3,8 +3,8 @@ services:
 
   ORA2305-01: 
     container_name: ORA2305-01
-    image:  container-registry.oracle.com/database/free:latest
-    #image:  gvenzl/oracle-free:23.5-full
+    #image:  container-registry.oracle.com/database/free:latest
+    image:  gvenzl/oracle-free:23.5-full
     mem_limit: '16gb'
     security_opt:
       - seccomp:unconfined
@@ -13,7 +13,7 @@ services:
     networks:
       - YADAMU-NET
     ports: 
-      - "1521:1521"
+      - "15218:1521"
     environment:
       ORACLE_SID: FREE
       ORACLE_PDB: FREEPDB1 
