Optimize Copy Operation Testing
Optimize Copy Operation Testing:
Stage CSV and AWS Datasets.
Fix Row Count operations
Enable Row Count operations on AWS and Azure

--- a/docker/dockerfiles/linux/TERADATA-17.yml
+++ b/docker/dockerfiles/linux/TERADATA-17.yml
@@ -3,7 +3,7 @@ services:
 
  TDATA17-01:
    container_name: TDATA17-01
-   image:  teradata/17
+   image:  yadamu/teradata
    security_opt:
       - label:disable    
    privileged: true
