Optimize Copy Operation Testing
Optimize Copy Operation Testing:
Stage CSV and AWS Datasets.
Fix Row Count operations
Enable Row Count operations on AWS and Azure

--- a/qa/regression/snowflakeCopy.json
+++ b/qa/regression/snowflakeCopy.json
@@ -6,8 +6,8 @@
 	"recreateSchema": true,
 	"reloadStagingArea" : false,
 	"parameters": {
-        "REMOTE_STAGING_AREA"     : "yadamu/aws/loader/%targetConnection%/%sourceConnection%/csv",
-		"DIRECTORY"               : "loader/%targetConnection%/%sourceConnection%/csv",
+        "REMOTE_STAGING_AREA"     : "yadamu/aws/loader/csv/%sourceConnection%",
+		"DIRECTORY"               : "loader/csv/%sourceConnection%",
 		"SPATIAL_FORMAT"          : "WKT"
 	},
 	"tests": [{
